avance examen falta poco

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -22,19 +22,6 @@
           "height": 0,
           "width": 0
         },
-        "50a5ebcc": {
-          "id": "50a5ebcc",
-          "path": "Problema/assets/jade/ci/layout.jade",
-          "output": "Problema/assets/layout.html",
-          "name": "layout.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
         "89fe462d": {
           "id": "89fe462d",
           "path": "Problema/docs/contact-us.png",
@@ -909,6 +896,56 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "546547cd": {
+          "id": "546547cd",
+          "path": "Problema/assets/carousel.html",
+          "output": "Problema/assets/carousel.html",
+          "name": "carousel.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "d76b9f39": {
+          "id": "d76b9f39",
+          "path": "Problema/assets/jade/carousel.jade",
+          "output": "Problema/assets/html/carousel.html",
+          "name": "carousel.jade",
+          "category": "HTML",
+          "autoCompile": false,
+          "pretty": true,
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "9ee15553"
+          ],
+          "type": "jade"
+        },
+        "9ee15553": {
+          "id": "9ee15553",
+          "path": "Problema/assets/jade/layout.jade",
+          "output": "Problema/assets/html/layout.html",
+          "name": "layout.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "c9bc5623": {
+          "id": "c9bc5623",
+          "path": "Problema/assets/html/layout.html",
+          "output": "Problema/assets/html/layout.html",
+          "name": "layout.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
         }
       },
       "deploymentHistory": {},
