--- a/prepros.cfg
+++ b/prepros.cfg
@@ -646,85 +646,6 @@
           "height": 0,
           "width": 0
         },
-        "1f4b7769": {
-          "id": "1f4b7769",
-          "path": "Problema/assets/layout.html",
-          "output": "Problema/assets/layout.html",
-          "name": "layout.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "72b47b1d": {
-          "id": "72b47b1d",
-          "path": "Problema/assets/sass/main.scss",
-          "output": "Problema/assets/css/main1.css",
-          "name": "main.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": true,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": true,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "6cf2556a": {
-          "id": "6cf2556a",
-          "path": "Problema/assets/css/main1.css",
-          "output": "Problema/assets/css/main1-dist.css",
-          "name": "main1.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "c0cde1b0": {
-          "id": "c0cde1b0",
-          "path": "Problema/assets/sass/layout.scss",
-          "output": "Problema/assets/css/layout.css",
-          "name": "layout.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": false,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "f04eab9c": {
-          "id": "f04eab9c",
-          "path": "Problema/assets/css/layout.css",
-          "output": "Problema/assets/css/layout-dist.css",
-          "name": "layout.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "5cf50720": {
           "id": "5cf50720",
           "path": "Problema/assets/jade/index.jade",
@@ -829,11 +750,69 @@
           "parents": [],
           "type": "css"
         },
-        "cd4e931f": {
-          "id": "cd4e931f",
-          "path": "Problema/assets/sass/header.scss",
-          "output": "Problema/assets/css/header.css",
-          "name": "header.scss",
+        "f16ccd02": {
+          "id": "f16ccd02",
+          "path": "Problema/assets/css/main.css",
+          "output": "Problema/assets/css/main-dist.css",
+          "name": "main.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "72b47b1d": {
+          "id": "72b47b1d",
+          "path": "Problema/assets/sass/main.scss",
+          "output": "Problema/assets/css/main.css",
+          "name": "main.scss",
+          "category": "CSS",
+          "autoCompile": true,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "sass"
+        },
+        "bb833954": {
+          "id": "bb833954",
+          "path": "Problema/assets/jade/contact.jade",
+          "output": "Problema/assets/contact.html",
+          "name": "contact.jade",
+          "category": "HTML",
+          "autoCompile": true,
+          "pretty": true,
+          "customOutput": true,
+          "imported": false,
+          "parents": [],
+          "type": "jade"
+        },
+        "02132fab": {
+          "id": "02132fab",
+          "path": "Problema/assets/contact.html",
+          "output": "Problema/assets/contact.html",
+          "name": "contact.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "f435e495": {
+          "id": "f435e495",
+          "path": "Problema/assets/sass/contact.scss",
+          "output": "Problema/assets/css/contact.css",
+          "name": "contact.scss",
           "category": "CSS",
           "autoCompile": true,
           "autoprefixer": true,
@@ -847,29 +826,11 @@
           "parents": [],
           "type": "sass"
         },
-        "b045b393": {
-          "id": "b045b393",
-          "path": "Problema/assets/sass/footer.scss",
-          "output": "Problema/assets/css/footer.css",
-          "name": "footer.scss",
-          "category": "CSS",
-          "autoCompile": true,
-          "autoprefixer": true,
-          "sourceMaps": false,
-          "libSass": true,
-          "compass": false,
-          "fullCompass": false,
-          "outputStyle": "expanded",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "sass"
-        },
-        "79f2ce09": {
-          "id": "79f2ce09",
-          "path": "Problema/assets/css/footer.css",
-          "output": "Problema/assets/css/footer-dist.css",
-          "name": "footer.css",
+        "50fb9745": {
+          "id": "50fb9745",
+          "path": "Problema/assets/css/contact.css",
+          "output": "Problema/assets/css/contact-dist.css",
+          "name": "contact.css",
           "category": "CSS",
           "autoCompile": false,
           "sourceMaps": false,
@@ -880,72 +841,6 @@
           "imported": false,
           "parents": [],
           "type": "css"
-        },
-        "ed62b269": {
-          "id": "ed62b269",
-          "path": "Problema/assets/css/header.css",
-          "output": "Problema/assets/css/header-dist.css",
-          "name": "header.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "546547cd": {
-          "id": "546547cd",
-          "path": "Problema/assets/carousel.html",
-          "output": "Problema/assets/carousel.html",
-          "name": "carousel.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "d76b9f39": {
-          "id": "d76b9f39",
-          "path": "Problema/assets/jade/carousel.jade",
-          "output": "Problema/assets/html/carousel.html",
-          "name": "carousel.jade",
-          "category": "HTML",
-          "autoCompile": false,
-          "pretty": true,
-          "customOutput": false,
-          "imported": true,
-          "parents": [
-            "9ee15553"
-          ],
-          "type": "jade"
-        },
-        "9ee15553": {
-          "id": "9ee15553",
-          "path": "Problema/assets/jade/layout.jade",
-          "output": "Problema/assets/html/layout.html",
-          "name": "layout.jade",
-          "category": "HTML",
-          "autoCompile": true,
-          "pretty": true,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "jade"
-        },
-        "c9bc5623": {
-          "id": "c9bc5623",
-          "path": "Problema/assets/html/layout.html",
-          "output": "Problema/assets/html/layout.html",
-          "name": "layout.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
         }
       },
       "deploymentHistory": {},
